--- a/style.css
+++ b/style.css
@@ -9,6 +9,10 @@
   perspective-origin: 50% 50%;
 }
 
+#video {
+  opacity: 0.6;
+}
+
 video {
   width: 188px;
   height: 141px;
@@ -21,8 +25,15 @@ video {
   cursor: pointer;
 }
 
+.filter, video {
+  -webkit-mask-image: url(mask.png);
+  mask-image: url(star.svg);
+}
+
 video + video {
-  opacity: 0.6;
+  -webkit-mask-image: none;
+  mask-image: none;
+  opacity: 0.4;
   pointer-events: none;
   filter: blur(7px);
   z-index: 0;
@@ -43,6 +54,7 @@ video + video {
   height: 141px;
   top: 408px;
   left: 230px;
+  opacity: 0.3;
   transform: scale3d(1, 1, 1) rotateX(0deg) rotateY(328deg) rotateZ(0deg) translate3d(0px, 0px, 0px) skew(0deg, 2deg);
 }
 
