--- a/style.css
+++ b/style.css
@@ -4,9 +4,11 @@
   width: 700px;
   height: 700px;
   display: block;
-  position: relative;
   perspective: 1000px;
-  perspective-origin: 50% 50%;
+  perspective-origin: 350px 350px;
+  position: fixed;
+  left: 50%;
+  margin-left: -350px;
 }
 
 #video {
@@ -66,9 +68,11 @@ body {
   align-items: center;
   padding: 0;
   margin: 0;
-  min-width: 700px;
+  overflow: hidden;
 }
 
 html {
-  height: 100%
+  height: 100%;
+  width: 100vw;
+  overflow: hidden;
 }
