--- a/style.css
+++ b/style.css
@@ -11,11 +11,16 @@
   margin-left: -350px;
 }
 
-#video {
+.videoContainer {
   opacity: 0.6;
 }
 
-video {
+.videoContainer iframe {
+  height: 100%;
+  margin-left: -32%;
+}
+
+.videoContainer {
   width: 188px;
   height: 141px;
   top: 408px;
@@ -27,12 +32,12 @@ video {
   cursor: pointer;
 }
 
-.filter, video {
+.filter, .videoContainer {
   -webkit-mask-image: url(mask.png);
   mask-image: url(star.svg);
 }
 
-video + video {
+video + video, iframe + iframe {
   -webkit-mask-image: none;
   mask-image: none;
   opacity: 0.4;
